--- a/conf/locale_en-US.ini
+++ b/conf/locale_en-US.ini
@@ -3,11 +3,19 @@ enable_js_prompt = Please enable JavaScript in your browser!
 homepage = Homepage
 home = Home
 about = About
+contact=Contact
+myblog=Blog
+
+login=login
+logout=logout
+register=register
 
 zh-CN = 简体中文
 en-US = English
 
 lang option = Language:
 current_lang = Language:
+
+copyright = Copyright
 
 [home]
