--- a/conf/locale_zh-CN.ini
+++ b/conf/locale_zh-CN.ini
@@ -3,11 +3,20 @@ enable_js_prompt = 请启用您浏览器的 JavaScript 选项！
 homepage = 首页
 home = 首页
 about = 关于
+contact=联系我
+myblog=我的博客
+
+login=登陆
+logout=退出
+register=注册
+categories=分类
 
 zh-CN = 简体中文
 en-US = English
 
 lang option = 语言选项：
 current_lang = 当前语言:
+
+copyright = 版权所有
 
 [home]
