--- a/conf/locale_en-US.ini
+++ b/conf/locale_en-US.ini
@@ -9,6 +9,7 @@ myblog=Blog
 login=login
 logout=logout
 register=register
+categories=categories
 
 zh-CN = 简体中文
 en-US = English
@@ -19,3 +20,6 @@ current_lang = Language:
 copyright = Copyright
 
 [home]
+search = Search
+recentPost = Recent Post
+recentComments = Recent Comments
