blog add umeditor

--- a/conf/locale_en-US.ini
+++ b/conf/locale_en-US.ini
@@ -6,10 +6,13 @@ about = About
 contact=Contact
 myblog=Blog
 
-login=login
-logout=logout
-register=register
-categories=categories
+login=Login
+logout=Logout
+register=Register
+categories=Categories
+
+not_login = You are not logged, After Logging, you can post you blog!
+quick_login = Quick login
 
 zh-CN = 简体中文
 en-US = English
@@ -23,3 +26,9 @@ copyright = Copyright
 search = Search
 recentPost = Recent Post
 recentComments = Recent Comments
+
+[blog]
+title=Title
+content=Content
+category=Category
+tag=Tag
