--- a/conf/locale_zh-CN.ini
+++ b/conf/locale_zh-CN.ini
@@ -11,6 +11,9 @@ logout=退出
 register=注册
 categories=分类
 
+not_login = 您还没有登录,登录后发表博客!
+quick_login = 快速登录
+
 zh-CN = 简体中文
 en-US = English
 
@@ -23,3 +26,9 @@ copyright = 版权所有
 search = 查询
 recentPost = 最近发表
 recentComments = 最新评论
+
+[blog]
+title=标题
+content=内容
+category=类型
+tag=标签
