--- a/conf/locale_en-US.ini
+++ b/conf/locale_en-US.ini
@@ -11,7 +11,7 @@ logout=Logout
 register=Register
 categories=Categories
 
-not_login = You are not logged, After Logging, you can post you blog!
+notLogin = You are not logged, After Logging, you can post you blog!
 quick_login = Quick login
 
 zh-CN = 简体中文
