--- a/conf/locale_zh-CN.ini
+++ b/conf/locale_zh-CN.ini
@@ -11,7 +11,7 @@ logout=退出
 register=注册
 categories=分类
 
-not_login = 您还没有登录,登录后发表博客!
+notLogin = 您还没有登录,登录后发表博客!
 quick_login = 快速登录
 
 zh-CN = 简体中文
