--- a/conf/locale_en-US.ini
+++ b/conf/locale_en-US.ini
@@ -16,11 +16,13 @@ quick_login = Quick login
 
 zh-CN = 简体中文
 en-US = English
-
 lang option = Language:
 current_lang = Language:
 
 copyright = Copyright
+
+op_succ=Operate Success!
+op_no_user=Operate Failure, login has expired!
 
 [home]
 search = Search
@@ -32,4 +34,7 @@ title=Title
 content=Content
 category=Category
 tag=Tag
+can_comment=Can have comment?
 submit=Submit
+save_succ=posted success,Return to the home page,you will see
+save_err=so sorry,you posted error! please try again later.
