--- a/conf/locale_zh-CN.ini
+++ b/conf/locale_zh-CN.ini
@@ -22,6 +22,9 @@ current_lang = 当前语言:
 
 copyright = 版权所有
 
+op_succ=操作成功
+op_no_user=操作失败,用户已效期
+
 [home]
 search = 查询
 recentPost = 最近发表
@@ -32,4 +35,7 @@ title=标题
 content=内容
 category=类型
 tag=标签
+can_comment=是否可以评论?
 submit=提交
+save_succ=发表成功,您可以返回个人主页查看
+save_err=抱歉,保存失败,请稍后再尝试.
